Fixes footnote styling on mobile

--- a/style.css
+++ b/style.css
@@ -390,4 +390,8 @@ nav.sidebar {
   nav.sidebar:not(.hidden) {
     transform: translateX(0);
   }
+
+  [role="doc-endnotes"] {
+    margin-left: 0;
+  }
 }
